# matlab-mcp-tools

./: .gitignore  README.md  install-matlab-mcp.sh  matlab engine for python.txt  mcp info for matlab.txt  mcp-pip.json  pyproject.toml  requirements.txt  setup-pip-matlab-mcp.sh  test-matlab-mcp.sh  test-pip-matlab-mcp.sh  test_matlab.py  test_workspace_optimization.py
docs/: benchmark_results.md  matlab_engine_limitations.md
examples/: test_emg_simulation.py  test_engine.py  test_initialization.py  test_plot_capture.py  test_sections.py  test_server.py
examples/matlab_scripts/: section_test.m  simulate_emg.m  test_plot.m  test_workspace.m
scripts/: bump_version.py  run-coverage.sh  setup-matlab-mcp.sh  test-matlab-mcp.sh
src/matlab_mcp/: __init__.py  converters.py  engine.py  figure_analysis.py  lint.py  matlab_compat.py  models.py  server.py
src/matlab_mcp/utils/: __init__.py  section_parser.py
tests/: conftest.py  test_comprehensive_optimization.py  test_compression.py  test_converters.py  test_engine_advanced.py  test_engine_features.py  test_figure_analysis.py  test_figures_eeglab.py  test_integration_eeglab.py  test_matlab_compat.py  test_matlab_lint.py  test_models_coverage.py  test_non_scalar_structs.py  test_section_execution.py  test_section_parser_unit.py  test_sections_eeglab.py  test_server_tools.py  test_workspace_eeglab.py  test_workspace_optimization.py
