[project]
name = "matlab-mcp-tools"
version = "0.1.0"
description = "MCP server for MATLAB integration with Cline"
authors = [
    { name = "Seyed Yahya Shirazi", email = "shirazi@ieee.org" }
]
dependencies = [
    "mcp[cli]>=0.1.0",
    "matlabengine",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = ["uv>=0.1.0"]

[project.scripts]
matlab-mcp-server = "matlab_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["matlab_mcp"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["matlab_mcp"]
